--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,15 +2,39 @@
     <string name="app_name">TheFWeather</string>
     <string name="title_activity_main">MainActivity</string>
 
-
     <string name="temp_unit_setting_title">Are you from the US or the rest of the world?</string>
     <string name="temp_setting_degree_f">°F</string>
     <string name="temp_setting_degree_c">°C</string>
-
 
     <string name="pref_key_string">whateverthefthisis_pref_key</string>
     <string name="saved_coord_pref_key">saved_coord_pref_key</string>
     <string name="temp_unit_setting">temp_unit_setting</string>
     <string name="temp_unit_f">F</string>
     <string name="temp_unit_c">C</string>
+    <string name="message_need_permission">Need Permissions</string>
+    <string name="message_grant_permission">This app needs permission to use this feature. You can allow them in app settings.</string>
+    <string name="label_setting">GOTO SETTINGS</string>
+    <string name="cancel">Cancel</string>
+
+
+    <string name="next">NEXT</string>
+    <string name="skip">SKIP</string>
+    <string name="start">GOT IT</string>
+
+    <string name="slide_1_title">Hello Food!</string>
+    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
+
+    <string name="slide_2_title">Movie Tickets</string>
+    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
+
+    <string name="slide_3_title">Great Discounts</string>
+    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
+
+    <string name="slide_4_title">World Travel</string>
+    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
+
+    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
+    <string name="play_again">Play Again</string>
+    <string name="app_need_permissions_to_run">This app cannot run without the permissions to use this feature</string>
+    <string name="exit">Exit</string>
 </resources>
