--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TheFWeather</string>
+    <string name="app_name">Rainbow</string>
     <string name="title_activity_main">MainActivity</string>
 
 
