--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,9 @@
     <string name="temp_unit_setting">temp_unit_setting</string>
     <string name="temp_unit_f">F</string>
     <string name="temp_unit_c">C</string>
-    <string name="message_need_permission">Need Permissions</string>
-    <string name="message_grant_permission">This app needs permission to use this feature. You can allow them in app settings.</string>
-    <string name="label_setting">GOTO SETTINGS</string>
+    <string name="message_need_permission">I need your fucking permission!</string>
+    <string name="message_grant_permission">I need these permission to work properly. You can allow them in app settings.</string>
+    <string name="label_setting">OPEN SETTINGS</string>
     <string name="cancel">Cancel</string>
 
 
@@ -18,23 +18,24 @@
     <string name="skip">SKIP</string>
     <string name="start">GOT IT</string>
 
-    <string name="slide_1_title">Hello Food!</string>
-    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
+    <string name="slide_1_title">Hello!</string>
+    <string name="slide_1_desc">This should be something more useful but I haven\'t worded on it yet!</string>
 
-    <string name="slide_2_title">Movie Tickets</string>
-    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
+    <string name="slide_2_title">Hi! Again.</string>
+    <string name="slide_2_desc">Let\'s just write Lorem ipsum here</string>
 
-    <string name="slide_3_title">Great Discounts</string>
-    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
+    <string name="slide_3_title">Again!</string>
+    <string name="slide_3_desc">Lorem ipsum dolor sit amet</string>
 
-    <string name="slide_4_title">World Travel</string>
-    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
+    <string name="slide_4_title">Oh god!</string>
+    <string name="slide_4_desc">Lorem ipsum dolor sit amet! If you see this, pls tell the developer to do something.</string>
 
     <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
     <string name="play_again">Play Again</string>
     <string name="app_need_permissions_to_run">This app cannot run without the permissions to use this feature</string>
     <string name="exit">Exit</string>
     <string name="icon_content_description">icon</string>
+    <string name="widget_update_time_pref">widgetUpdateTime</string>
 
     <string name="pref_temp">tempUnit</string>
     <string name="pref_distance">distanceUnit</string>
@@ -74,4 +75,7 @@
     <string name="forecast_title">The next 7 days</string>
     <string name="air_quality_index_title">Air Quality Index</string>
     <string name="pressure_title_alt">Depression level</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="configure">Configure</string>
+    <string name="add_widget">Add widget</string>
 </resources>
