--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="temp_unit_setting">temp_unit_setting</string>
     <string name="temp_unit_f">F</string>
     <string name="temp_unit_c">C</string>
-    <string name="message_need_permission">I need your fucking permission!</string>
+    <string name="message_need_permission">I need your permission</string>
     <string name="message_grant_permission">I need these permission to work properly. You can allow them in app settings.</string>
     <string name="label_setting">OPEN SETTINGS</string>
     <string name="cancel">Cancel</string>
@@ -47,7 +47,7 @@
     <string name="distance_setting_title">Distance unit</string>
     <string name="speed_setting_title">Speed Unit</string>
     <string name="pressure_setting_title">Pressure Unit</string>
-    <string name="rate_setting_title">Rate this super useful app</string>
+    <string name="rate_setting_title">Rate this super friendly app</string>
     <string name="about_setting_title">About me</string>
     <string name="help_setting_title">Help</string>
     <string name="temp_setting_degree_f">°F</string>
@@ -80,6 +80,10 @@
     <string name="add_widget">Add widget</string>
     <string name="about_dialog_heading">Hi!</string>
     <string name="about_dialog_intro">I\'m Rainbow, the most friendly weather app you can ever find. I was born with a mission of bringing smiles and useful weather information to your daily life, definitely not because someone has too much free time on his hands.</string>
-    <string name="about_dialog_outro">If you find me interesting, go ahead an give me a 5-star on PlayStore. Love ya!</string>
+    <string name="about_dialog_outro">If you find me interesting, go ahead and give me a 5-star on PlayStore. Love ya!</string>
     <string name="about_dialog_close_text">Nice!</string>
+    <string name="loading_text">Contacting my cloud friend...</string>
+    <string name="no_connection_tv1">I can\'t connect to the internet</string>
+    <string name="no_connection_tv2">I can\'t call my buddy on the cloud...</string>
+    <string name="no_connection_tv3">Do you really want me to cry?</string>
 </resources>
