--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,4 +112,5 @@
     <string name="wind_south_west" translatable="true">Southwest</string>
     <string name="wind_west" translatable="true">West</string>
     <string name="the_next_hours_title">The next hours</string>
+    <string name="default_location">I have no idea where are you</string>
 </resources>
