--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,4 +115,5 @@
     <string name="default_location">I have no idea where are you</string>
     <string name="location_list_title">Locations</string>
     <string name="quote_placeholder">...</string>
+    <string name="depression_level_title">Depression level</string>
 </resources>
