--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,9 +82,9 @@
     <string name="about_dialog_intro">I\'m Rainbow, the most friendly weather app you can ever find. I was born with a mission of bringing smiles and useful weather information to your daily life, definitely not because someone has too much free time on his hands.</string>
     <string name="about_dialog_outro">If you find me interesting, go ahead and give me a 5-star on PlayStore. Love ya!</string>
     <string name="about_dialog_close_text">Nice!</string>
-    <string name="loading_text">Contacting my cloud buddy...</string>
+    <string name="loading_text">Contacting my cloud buddy…</string>
     <string name="no_connection_tv1">I can\'t connect to the internet</string>
-    <string name="no_connection_tv2">I can\'t call my buddy on the cloud...</string>
+    <string name="no_connection_tv2">I can\'t call my buddy on the cloud…</string>
     <string name="no_connection_tv3">Do you really want me to cry?</string>
     <string name="air_quality_dialog_heading">Air Quality</string>
 
@@ -114,6 +114,9 @@
     <string name="the_next_hours_title">The next hours</string>
     <string name="default_location">I have no idea where are you</string>
     <string name="location_list_title">Locations</string>
-    <string name="quote_placeholder">...</string>
+    <string name="quote_placeholder">…</string>
     <string name="depression_level_title">Depression level</string>
+    <string name="air_quality_dialog_description">Here are some scientific information</string>
+    <string name="provided_by_aqicn_org">provided by aqicn.org</string>
+    <string name="expicit_setting_title">Are you okay with swearing?</string>
 </resources>
