--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,12 +128,12 @@
     <string name="snack_bar_undo">Undo</string>
     <string name="snack_bar_text">Location deleted.</string>
 
-    <string name="uv_summary_0">(Sun set)</string>
-    <string name="uv_summary_3">(Low)</string>
-    <string name="uv_summary_6">(Moderate)</string>
-    <string name="uv_summary_8">(High)</string>
-    <string name="uv_summary_11">(Very high)</string>
-    <string name="uv_summary_11_above">(Extreme)</string>
+    <string name="uv_summary_0">Sun set</string>
+    <string name="uv_summary_3">Low</string>
+    <string name="uv_summary_6">Moderate</string>
+    <string name="uv_summary_8">High</string>
+    <string name="uv_summary_11">Very high</string>
+    <string name="uv_summary_11_above">Extreme</string>
 
     <string name="depress_val_0">Mild</string>
     <string name="depress_val_1">Depressed</string>
