--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,13 +13,13 @@
     <string name="start">GOT IT</string>
 
     <string name="slide_1_title">Hi there!</string>
-    <string name="slide_1_desc">I\'m Rainbow. I\'n here to show you the basic of using this app. Let\'s head to the next screen!</string>
+    <string name="slide_1_desc">I\'m Rainbow and I\'ll show you how to use this app</string>
 
     <string name="slide_2_title">This is the main layout of Rainbow</string>
-    <string name="slide_2_desc">You can swipe left and right to navigate between screens. Easy!</string>
+    <string name="slide_2_desc">Swipe left and right for navigation</string>
 
     <string name="slide_3_title">To refresh</string>
-    <string name="slide_3_desc">You just need to swipe down on home screen, try it!</string>
+    <string name="slide_3_desc">Swipe down to refresh</string>
 
     <string name="slide_4_title">That\'s Rainbow\'s widget</string>
     <string name="slide_4_desc">You can tap the weather icon to open the details screen, double tap the quote to refresh the widget</string>
@@ -78,12 +78,12 @@
     <string name="configure">Configure</string>
     <string name="add_widget">Add widget</string>
     <string name="about_dialog_heading">About me</string>
-    <string name="about_dialog_intro">Hi! I\'m Rainbow, the most friendly weather app you can ever find. I was born with a mission of bringing smiles and useful weather information to your daily life, definitely not because someone has too much free time on his hands.</string>
+    <string name="about_dialog_intro">Hi! I\'m Rainbow, a super friendly weather app. I was born with a mission of bringing smiles and useful weather information to your daily life, definitely not because someone has too much free time on his hands.</string>
     <string name="about_dialog_outro">If you find me interesting, go ahead and give me a 5-star on PlayStore. Love ya!</string>
     <string name="about_dialog_close_text">Nice!</string>
-    <string name="loading_text">Contacting my cloud buddy…</string>
-    <string name="no_connection_tv1">I can\'t connect to the internet</string>
-    <string name="no_connection_tv2">I can\'t call my buddy on the cloud…</string>
+    <string name="loading_text">Calling my cloud buddy…</string>
+    <string name="no_connection_tv1">Cloud not found</string>
+    <string name="no_connection_tv2">Yeah clear sky is cool but have you tried connecting to the internet?</string>
     <string name="no_connection_tv3">Do you really want me to cry?</string>
     <string name="air_quality_dialog_heading">Air Quality</string>
 
