--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,6 +162,8 @@
     <string name="not_available">N/A</string>
     <string name="photo_name_na">Photo\'s description not provided</string>
     <string name="sponsor">Sponsor</string>
+    <string name="time_place_holder">Time:</string>
+    <string name="daily_notification_setting_title">Daily notification</string>
     <string-array name="depression_levels">
         <item>@string/depress_val_0</item>
         <item>@string/depress_val_1</item>
