add nearby places to eat suggestion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,7 +148,7 @@
     <string name="depress_val_10">Unbearable</string>
     <string name="depress_val_11">Nein</string>
     <string name="depress_val_12">Chuck Norris</string>
-    <string name="what_to_eat_title">What to eat today?</string>
+    <string name="what_to_eat_title">Any places to eat nearby?</string>
     <string name="food_to_eat_placeholder">Rainbow said:</string>
     <string name="details_info_title">Other useful information</string>
     <string name="cloud_cover_title">Cloud</string>
